configuracao do email e template bootstrap

--- a/WebContent/WEB-INF/jdbc.properties
+++ b/WebContent/WEB-INF/jdbc.properties
@@ -1,10 +1,10 @@
-jdbc.url=jdbc\:postgresql\://localhost\:5432/clinicadrclaudio
+jdbc.url=jdbc:postgresql://localhost:5432/clinicadrclaudio
 jdbc.password=postgres
 jdbc.driver=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jdbc.user=postgres
 
-#jdbc.url=jdbc\:postgresql\://localhost\:5432/clinicadrclaudio
+#jdbc.url=jdbc:postgresql://localhost:5432/clinicadrclaudio
 #jdbc.password=admin
 #jdbc.driver=org.postgresql.Driver
 #hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
