--- a/WebContent/WEB-INF/jdbc.properties
+++ b/WebContent/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.url=jdbc:postgresql://localhost:5432/clinicadrclaudio
-jdbc.password=postgres
+jdbc.password=admin
 jdbc.driver=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jdbc.user=postgres
